--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -25,15 +25,27 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
 
-                    <li class="nav-item">
-                        <a href="@Url.Action("Index", "Home")" class="nav-link active" aria-current="page"> Inicio </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="@Url.Action("Index", "Categoria")" class="nav-link active" aria-current="page"> Categorías </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="@Url.Action("Index", "Producto")" class="nav-link active" aria-current="page"> Productos </a>
-                    </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Categoria")" class="nav-link active" aria-current="page"> Categorías </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Producto")" class="nav-link active" aria-current="page"> Productos </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("LogOut", "Auth")" class="nav-link active" aria-current="page"> Cerrar Sesión </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Home")" class="nav-link active" aria-current="page"> Inicio </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Login", "Auth")" class="nav-link active" aria-current="page"> Login </a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
